2003-01-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/unixFCmd.test: only do groups check on unix

2003-01-24  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclStringObj.c: proper fixes for Tcl_SetObjLength and 
	Tcl_AttemptSetObjectLength dealing with string objects with
	both pure-unicode and normal internal representations. 
	Previous fix didn't handle all cases correctly.
	* generic/tclIO.c: Add 'Tcl_GetString()' to ensure the object has
	a valid 'objPtr->bytes' field before manipulating it directly.
	
        This fixes [Bug 635200] and [Bug 671138], but may reduce performance
	of Unicode string handling in some cases. A further patch will
	be applied to address this, once the code is known to be correct.

2003-01-24  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/configure.in: Add test to see if alloca
	is undefined in malloc.h.
	* win/tclWin32Dll.c (TclpCheckStackSpace): Rework
	the SEH exception handler logic to avoid using
	the stack since alloca will modify the stack.
	This was causing a nasty bug that would set the
	exception handler to 0 because it tried to pop
	the previous exception handler off the top of
	the stack.

2003-01-23  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/lset.n: Fixed fault in return values from lset in
	documentation examples [SF Bug #658463] and tidied up a bit at the
	same time.

2003-01-21  Joe English  <jenglish@users.sourceforge.net>
	* doc/namespace.n (namespace inscope): Clarified documentation
	[SF Patch #670110]

2003-01-21  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/tcl.m4 (SC_CONFIG_CFLAGS): Set SHLIB_SUFFIX
	so that TCL_SHLIB_SUFFIX will be set to a useful
	value in the generated tclConfig.sh.
	Set SHLIB_LD_LIBS to "" or '${LIBS}' based on
	the --enable-shared flag. This matches the
	UNIX implementation.

2003-01-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclCkalloc.c: change %ud to %u as appropriate.
